--- a/views/widget.jade
+++ b/views/widget.jade
@@ -429,7 +429,7 @@ block content
                         code.prettyprint.lang-html
                           | {{ widget.widget_code }}
                     .codebox-actions(ng-show='showWidgetCode')
-                      #[a(id="clipboard_copy" href="#" data-clipboard-target="#widget_code") Copy]
-                      #[a(href="#" id="generate-output-code" ng-click='widget.generateOutputCode()') Generate Code]
+                      #[a(id="clipboard_copy" href="#" data-clipboard-target="#widget_code") Copy to Clipboard]
+                      #[a(href="#" class="hidden" id="generate-output-code" ng-click='widget.generateOutputCode()') Generate Code]
   script(src="/javascripts/widget.js",type="application/javascript")
 
