--- a/views/widget.jade
+++ b/views/widget.jade
@@ -438,6 +438,6 @@ block content
                           | {{ widget.widget_code }}
                     .codebox-actions(ng-show='showWidgetCode')
                       a(id="clipboard_copy" href="#" data-clipboard-target="#widget_code") Copy to Clipboard
-                      a(href="#" class="" id="generate-output-code" ng-click='widget.generateOutputCode()') Generate Code
+                      a(href="#" class="hidden" id="generate-output-code" ng-click='widget.generateOutputCode()') Generate Code
   script(src="/javascripts/widget.js",type="application/javascript")
 
