--- a/views/widget.jade
+++ b/views/widget.jade
@@ -270,7 +270,12 @@ block content
             console.log("Error: ");
             console.log(response.data);
             $scope.widget.widget_code = 'Error generating widget code snippet. Please check it.';
-            $scope.widget_form.cannot_validate_sip_uri = response.data.errors.comeback_errors.apiErrorMessage;
+
+            if(response.data.errors && response.data.errors.comeback_errors && response.data.errors.comeback_errors.apiErrorMessage)
+              $scope.widget_form.cannot_validate_sip_uri = response.data.errors.comeback_errors.apiErrorMessage;
+            else
+              $scope.widget_form.cannot_validate_sip_uri = "Unexpected error linking your SIP URI. Please try again. ";
+
             $scope.widget_form.sip_provisioning = false;
             $scope.widget_form.sip_provisioned = false;
           });
