--- a/views/widget.jade
+++ b/views/widget.jade
@@ -93,7 +93,8 @@ block content
         background_style: 'dark',
         widget_code: 'Enter your SIP URI to Generate the code snippet',
         sip_uri: 'echo@ivrs',
-        show_text_html_value: '<h3>This is a placeholder for your message</h3>'
+        show_text_html_value: '<h3>This is a placeholder for your message</h3>',
+        incompatible_browser_configuration: 'hide_widget'
       };
 
       $scope.prepareHtmlForCodepen = function(data){
