--- a/public/stylesheets/less/widget.less
+++ b/public/stylesheets/less/widget.less
@@ -59,7 +59,7 @@
 
 .widget-box{
   position: relative;
-  padding: 70px;
+  padding: 70px 10px;
   text-align: center;
   .rounded(6px);
   .widget-footer-left{
@@ -85,13 +85,19 @@
     }
   }
   .btn-style{
-    width: 100%;
+    display: inline-block;
+    min-width: 150px;
+    padding-left:10px;
+    padding-right:10px;
+    text-align: center;
+    width: auto;
   }
   &.style-a{
     .boxShadow(1,0.2);
     background: #f5f5f7;
     .btn-style{
       .btn-widget(#19a1f3);
+      margin: 0;
     }
     .widget-footer{
       a{
@@ -104,6 +110,7 @@
     background: #2a2929;
     .btn-style{
       .btn-widget(#92168e);
+      margin: 0;
     }
     .widget-footer-left,
     .widget-footer-right{
