btn responsive fix

--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -49,7 +49,9 @@
     margin-bottom: 20px;
     border: 1px solid @border-grey;
     .rounded(6px);
-
+    button{
+      margin-bottom: 10px;
+    }
     label{
       display: block;
       color: @subText;
