btn responsive fix

--- a/public/stylesheets/less/widget.less
+++ b/public/stylesheets/less/widget.less
@@ -1,5 +1,7 @@
 /*Btn Widget Stuff*/
 .btn-widget(@btn-color){
+  max-width: 100%;
+  
   display: inline-block;
 
   border: 1px solid darken(@btn-color,0.5%);
