[v0.14.4] Fixing js issue (patch)

--- a/views/voxbone_widget.jade
+++ b/views/voxbone_widget.jade
@@ -14,7 +14,8 @@ html(lang='en', ng-app="voxboneApp")
     script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js",type="application/javascript")
 
     script(src="//webrtc.voxbone.com/js/jssip-0.7.9-vox.js",type="application/javascript")
-    script(src="//webrtc.voxbone.com/js/voxbone-0.0.3.js",type="application/javascript")
+    //- script(src="//webrtc.voxbone.com/js/voxbone-0.0.3.js",type="application/javascript")
+    script(src="/javascripts/voxbone-0.0.3_patched.js",type="application/javascript")
 
     script.
       var eventHandlers = {
