--- a/views/widget.jade
+++ b/views/widget.jade
@@ -439,11 +439,11 @@ block content
                       p Paste the following HTML code into your website or give it a try using on
 
                       .btn-code-playground
-                        .btn-jsfiddle
+                        .btn-jsfiddle(ng-show="showWidgetCode")
                           form#code_debug_jsfiddle(action="https://jsfiddle.net/api/post/library/pure/" method="POST" target="_blank")
                             input(type="hidden" name="html" value='{{ prepareHtmlForCodepen(widget.widget_code) }}')
                             a(href="#" onclick="$('#code_debug_jsfiddle').submit();") JSFiddle
-                        .btn-jsfiddle
+                        .btn-jsfiddle(ng-show="showWidgetCode")
                           form#code_debug_codepen(action="https://codepen.io/pen/define" method="POST" target="_blank")
                             input(type="hidden" name="data" value='{"html": "{{ prepareHtmlForCodepen(widget.widget_code) }}"}')
                             a(href="#" onclick="$('#code_debug_codepen').submit();") CodePen
