--- a/views/widget.jade
+++ b/views/widget.jade
@@ -93,7 +93,7 @@ block content
         dial_pad: true,
         button_style: 'style-b',
         background_style: 'dark',
-        widget_code: 'Enter your SIP URI to Generate the code snippet',
+        widget_code: 'Click on the SIP URI field to the left to use the Echo Service(echo@ivrs), or enter your SIP URI to Generate the code snippet',
         sip_uri: 'echo@ivrs',
         show_text_html_value: '<h3>This is a placeholder for your message</h3>',
         incompatible_browser_configuration: 'hide_widget'
