--- a/views/widget.jade
+++ b/views/widget.jade
@@ -96,15 +96,14 @@ block content
 
     app.controller('WidgetController', ['$scope', '$http', '$window', function($scope, $http, $window){
 
-      $scope.showWidgetCode = true;
+      $scope.showWidgetCode = false;
       $scope.sipUriLinked = false;
 
       $scope.master = {
         dial_pad: true,
         button_style: 'style-b',
         background_style: 'dark',
-        //- widget_code: 'Click on the SIP URI field to the left to use the Echo Service(echo@ivrs), or enter your SIP URI to Generate the code snippet',
-        widget_code: '<div class="voxButton" id="voxButton_565640a30ccab11100dc7ab0"><link rel="stylesheet" href="https://click2vox.com/stylesheets/widget.css?v=0146"><scripts ssrc="https://click2vox.com/javascripts/widget.js?v=0146"></scripts><iframe id="call_button_frame" width="300" height="183" frameBorder="0" scrolling="no" src="https://click2vox.com/voxbone_widget/565640a30ccab11100dc7ab0"></iframe><div id="control"></div></div>',
+        widget_code: 'Click on the SIP URI field to the left to use the Echo Service(echo@ivrs), or enter your SIP URI to Generate the code snippet',
         sip_uri: 'echo@ivrs',
         show_text_html_value: '<h3>This is a placeholder for your message</h3>',
         incompatible_browser_configuration: 'hide_widget',
