--- a/views/widget.jade
+++ b/views/widget.jade
@@ -388,8 +388,9 @@ block content
                             span.badge(data-toggle='tooltip' data-placement="right" title="Send custom data to your SIP server using the X-Voxbone-Context header. Make sure to configure your SIP server to process this header.") ?
                           input.form-control(type="text" name="context" ng-model="widget.context" ng-change='widget.generateOutputCode()' ng-model-options="{ updateOn: 'blur' }")
                         .form-group
-                          label(for="btn-context") DTMF Dial Pad
+                          label(for="btn-context")
                             input(type="checkbox" name="dial_pad" ng-model="widget.dial_pad" ng-change='widget.generateOutputCode()' ng-model-options="{ updateOn: 'blur' }")
+                            span DTMF Dial Pad
                             span.badge(data-toggle='tooltip' data-placement="right" title="Display a dialpad to allow your users to enter DTMF digits during a call.") ?
                         .form-group
                           label(for="btn-context") Send Digits #[span.badge(data-toggle='tooltip' data-placement="right" title="Automatically send DTMF digit(s) after a call is connected. This is useful for automatically navigating IVRs or entering access codes for a conference bridge. Digits should use the following format:'1,2,3,1200ms,4,5,900ms,6,#' - This string will generate 1 2 3, wait 1200 milliseconds, enter 4, 5, wait 900 milliseconds then enter 6, #") ?]
