--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -50,7 +50,7 @@
     border: 1px solid @border-grey;
     .rounded(6px);
     button{
-      margin-bottom: 10px;
+      margin: 0 5px 10px;
     }
     label{
       display: block;
@@ -152,6 +152,9 @@
           }
         }
 
+      }
+      button{
+        margin: 0;
       }
     }
     .prev-code{
