--- a/views/layout.jade
+++ b/views/layout.jade
@@ -21,8 +21,8 @@ html(lang='en', ng-app="voxboneApp")
     script(src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.3/clipboard.min.js",type="application/javascript")
 
     script(src="//webrtc.voxbone.com/js/jssip-0.7.9-vox.js",type="application/javascript")
-    //- script(src="//webrtc.voxbone.com/js/voxbone-0.0.3.js",type="application/javascript")
-    script(src="/javascripts/voxbone-0.0.3_patched.js",type="application/javascript")
+    script(src="//webrtc.voxbone.com/js/voxbone-0.0.3.js",type="application/javascript")
+    //- script(src="/javascripts/voxbone-0.0.3_patched.js",type="application/javascript")
 
     script.
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
