--- a/views/widget.jade
+++ b/views/widget.jade
@@ -98,6 +98,11 @@ block content
 
       $scope.showWidgetCode = false;
       $scope.sipUriLinked = false;
+      $scope.preview_webrtc_compatible = true;
+
+      $scope.onClickTab = function (is_preview_webrtc_compatible) {
+        $scope.preview_webrtc_compatible = is_preview_webrtc_compatible;
+      };
 
       $scope.master = {
         dial_pad: true,
@@ -106,8 +111,7 @@ block content
         widget_code: 'Click on the SIP URI field to the left to use the Echo Service(echo@ivrs), or enter your SIP URI to Generate the code snippet',
         sip_uri: 'echo@ivrs',
         show_text_html_value: '<h3>This is a placeholder for your message</h3>',
-        incompatible_browser_configuration: 'hide_widget',
-        preview_webrtc_compatible: 'true'
+        incompatible_browser_configuration: 'hide_widget'
       };
 
       $scope.prepareHtmlForCodepen = function(data){
@@ -135,7 +139,7 @@ block content
 
       $scope.showCallButton = function () {
         var ibc_value = $scope.widget.incompatible_browser_configuration;
-        return ($scope.widget.preview_webrtc_compatible == 'true') || (ibc_value == 'link_button_to_a_page');
+        return $scope.preview_webrtc_compatible || (ibc_value == 'link_button_to_a_page');
       };
 
       $scope.getHiddenButtonText = function () {
@@ -157,7 +161,7 @@ block content
         if ($scope.isInCall())
           return;
 
-        if(($scope.widget.preview_webrtc_compatible == 'false') && ($scope.widget.incompatible_browser_configuration == 'link_button_to_a_page')) {
+        if(!$scope.preview_webrtc_compatible && ($scope.widget.incompatible_browser_configuration == 'link_button_to_a_page')) {
           $window.open($scope.widget.link_button_to_a_page_value,'_blank');
           return;
         }
@@ -182,7 +186,7 @@ block content
             voxbone.WebRTC.context = $scope.widget.context;
 
           if($scope.widget.send_digits) {
-            console.log('Digits sent: ' + $scope.widget.send_digits);
+            console.log('Digits to be send: ' + $scope.widget.send_digits);
             voxbone.WebRTC.configuration.dialer_string = $scope.widget.send_digits;
           }
 
@@ -420,15 +424,13 @@ block content
 
           .col-sm-6.right-col
             .section
-              div
-                span.title Widget Preview
-                input(type='radio' name='preview' ng-model='widget.preview_webrtc_compatible' value="true")
-                span.radio-name(style="padding-left: 4px;") WebRTC Browser
-                span.badge(data-toggle='tooltip' data-placement="right" title="This is how the widget will look like in a WebRTC compatible browser") ?
-                span &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                input(type='radio' name='preview' ng-model='widget.preview_webrtc_compatible' value="false")
-                span.radio-name(style="padding-left: 4px;") Non-WebRTC Browser
-                span.badge(data-toggle='tooltip' data-placement="right" title="This is how the widget will look like in a WebRTC incompatible browser") ?
+              span.title Widget Preview
+              ul.nav.nav-tabs
+                li(ng-click="onClickTab(true)" ng-class="{active:preview_webrtc_compatible}")
+                  a(data-toggle="tab" href="#") WebRTC Browser #[span.badge(data-toggle='tooltip' data-placement="right" title="This is how the widget will look like in a WebRTC compatible browser") ?]
+                li(ng-click="onClickTab(false)" ng-class="{active:!preview_webrtc_compatible}")
+                  a(data-toggle="tab" href="#") Non-WebRTC Browser #[span.badge(data-toggle='tooltip' data-placement="right" title="This is how the widget will look like in a WebRTC incompatible browser") ?]
+
               .boxPanel.preview
                 .prev-view.light
                   .not-supported#not-supported-message(ng-show="!showCallButton()" ng-bind-html="getHiddenButtonText()")
