--- a/public/stylesheets/root.less
+++ b/public/stylesheets/root.less
@@ -48,3 +48,7 @@ Plugin Css
 
 /* Bootstrap Toggle */
 @import url('plugin/bootstrap-toggle/bootstrap-toggle.min.css');
+
+.nav-tabs {
+  border-bottom: 0px;
+}
