[Fix] show button on empty url

--- a/views/voxbone_widget.jade
+++ b/views/voxbone_widget.jade
@@ -145,7 +145,7 @@ html(lang='en', ng-app="voxboneApp")
           }
 
           $scope.showCallButton = function () {
-            return $scope.isWebRTCSupported() || "#{the_widget.link_button_to_a_page}";
+            return $scope.isWebRTCSupported() || "#{the_widget.link_button_to_a_page}" != undefined;
           }
 
           $scope.isInCall = function () {
