[MISC] Adding cookies & auto reload to widget

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,8 +13,9 @@ html(lang='en', ng-app="voxboneApp")
     script(src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js",type="application/javascript")
     script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js' )
 
-    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js",type="application/javascript")
-    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular-sanitize.min.js",type="application/javascript")
+    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js",type="application/javascript")
+    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-sanitize.min.js",type="application/javascript")
+    script(src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-cookies.min.js",type="application/javascript")
 
     script(src="//cdnjs.cloudflare.com/ajax/libs/raty/2.7.0/jquery.raty.js",type="application/javascript")
     script(src="//google-code-prettify.googlecode.com/svn/loader/run_prettify.js")
